; ModuleID = '/home/carl/AnghaBench/zfs/module/nvpair/extr_fnvpair.c_fnvlist_add_uint64_array.c'
source_filename = "/home/carl/AnghaBench/zfs/module/nvpair/extr_fnvpair.c_fnvlist_add_uint64_array.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fnvlist_add_uint64_array(i32* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @nvlist_add_uint64_array(i32* %9, i8* %10, i32* %11, i32 %12)
  %14 = call i32 @VERIFY0(i32 %13)
  ret void
}

declare dso_local i32 @VERIFY0(i32) #1

declare dso_local i32 @nvlist_add_uint64_array(i32*, i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
